Remove request body from GET requests and update api.yml
